tests/typing/faulty_condition.sy
start :: fn do
    if 1 do
    end
    loop 1 + 1 * 2 do
    end
end
// error: $Missmatch { expected: Type::Bool, .. }
// error: $Missmatch { expected: Type::Bool, .. }
